add script dependencies

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <h1>Christmas Wish List Organizer</h1>
     <div id="person-container">
       <form id="new-form">
-        <input name="text" id="person-name" />
-        <input name='text' id="title-of-wish-list" />
+        <input name='title' id="title-of-wish-list" placeholder="Name Your Wish List!"/>
         <button id="submit">New Wishes</button>
       </form>
     </div>
@@ -20,7 +19,7 @@
     </div>
     <script type="text/javascript" src="models/wish_list.js"></script>
     <script type="text/javascript" src="models/wish_item.js"></script> 
-    <!-- <script type="text/javascript" src="services/API.js"></script> -->
+    <script type="text/javascript" src="services/API.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
