--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Christmas Wish List Organizer</h1>
     <div id="person-container">
-      <form id="new-form">
+      <form id="new-list-form">
         <input name='title' id="title-of-wish-list" placeholder="Name Your Wish List!"/>
         <button id="submit">New Wishes</button>
       </form>
