add div element for your lists

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <button id="submit">New Wishes</button>
       </form>
     </div>
+    <div id="your-list-container">
+      
+    </div>
     <div id="wish-list-container">
       
     </div>
