removed html elements for a full js refactor kept working mvp commented out

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>Christmas Wish List Organizer</h1>
+    <!-- <h1>Christmas Wish List Organizer</h1>
     <div id="person-container">
       <form id="new-list-form">
         <input name='title' id="title-of-wish-list" placeholder="Name Your Wish List!"/>
         <button id="submit">New Wishes</button>
       </form>
-    </div>
-    <div id="your-list-container">
+    </div> -->
+    <!-- <div id="your-list-container">
       
-    </div>
-    <div id="wish-list-container">
+    </div> -->
+    <!-- <div id="wish-list-container">
       
-    </div>
-    <div id="wish-items-container">
+    </div> -->
+    <!-- <div id="wish-items-container">
 
-    </div>
+    </div> -->
     <script type="text/javascript" src="models/wish_list.js"></script>
     <script type="text/javascript" src="models/wish_item.js"></script> 
     <script type="text/javascript" src="services/API.js"></script>
