commented out inner html elements

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <!-- <h1>Christmas Wish List Organizer</h1>
@@ -11,12 +14,12 @@
         <button id="submit">New Wishes</button>
       </form>
     </div> -->
-    <!-- <div id="your-list-container">
+     <!-- <div id="your-list-container">  -->
       
-    </div> -->
-    <!-- <div id="wish-list-container">
+    <!-- </div>  -->
+    <!-- <div id="wish-list-container"> -->
       
-    </div> -->
+    <!-- </div>  -->
     <!-- <div id="wish-items-container">
 
     </div> -->
